# WHU-SCSE-Coursework

./: .gitignore  .gitmodules  README.md
《人工智能》期末大作业/: README.md  requirements.txt  run_experiments.py
《人工智能》期末大作业/configs/: default.yaml
《人工智能》期末大作业/src/: __init__.py  (+7 more)
《人工智能》课内实验/: .gitignore  2.3.1_八数码问题.py  2.3.5_01背包问题.py  3.3.2_图书管理系统问题.py  3.3.3_小华带电脑问题.py  4.3.1_遗传算法求解TSP问题.py  4.3.2_蚁群算法求解TSP问题.py  4.3.3_模拟退火算法求解TSP问题.py  5.3.1_数据集的预处理.py  5.3.2_使用KNN进行鸢尾花分类.py  5.3.3_使用决策树进行鸢尾花分类.py  5.3.4_使用朴素贝叶斯进行鸢尾花分类.py  5.3.5_使用支持向量机进行鸢尾花分类.py  6.3.1_使用PCA对半导体数据进行降维处理.py  6.3.2_PCA的人脸识别算法.py  6.3.3_使用K-means对数据集进行聚类分析.py  README.md  pyproject.toml
《人工智能》课内实验/data/: S.txt  testSet.txt
《人工智能》课内实验/docs/: coverage_matrix.md
《人工智能》课内实验/experiments/01_search/: 2.3.2_传教士与野人问题.py  2.3.3_猴子和香蕉问题.py  2.3.4_汉诺塔问题.py  2.3.6_旅行商问题.py
《人工智能》课内实验/experiments/02_logic_and_optimization/: 3.3.1_三老师授课分配问题.py  3.3.3_小华带电脑问题.py
《人工智能》课内实验/experiments/03_machine_learning/: 5.3.1_数据集的预处理.py  5.3.2_使用KNN进行鸢尾花分类.py  5.3.3_使用决策树进行鸢尾花分类.py  5.3.4_使用朴素贝叶斯进行鸢尾花分类.py  5.3.5_使用支持向量机进行鸢尾花分类.py  6.3.1_使用PCA对半导体数据进行降维处理.py  6.3.2_PCA的人脸识别算法.py  6.3.3_使用K-means对数据集进行聚类分析.py
《人工智能》课内实验/experiments/04_neural_networks/: 7.3.1_激活函数可视化.py  7.3.2_MNIST手写数字识别.py  8.3.1_CNN基础组件实现.py  8.3.2_FashionMNIST时装分类.py
《人工智能》课内实验/experiments/05_sequence_and_graph/: 10.3.1_基于GCN的节点分类.py  9.3.1_RNN模型案例_姓氏分类.py  9.3.2_LSTM模型案例_影评情感分析.py  9.3.3_Transformer模型案例_英法机器翻译.py
《人工智能》课内实验/tools/: setup_datasets.py
《密码学引论》实验大作业/: Makefile  README.md  SM4实验报告.docx  SM4实验报告.md  main.c
《自然语言处理》实验/: .gitignore  README.md
(+84 files in other folders)
