[project]
name = "ai-course-experiments"
version = "0.1.0"
description = "AI course experiment case reproductions"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
deep-learning = [
    "torch>=2.0",
    "torchvision>=0.15",
]

[tool.uv]
package = false
